--- a/style.css
+++ b/style.css
@@ -31,8 +31,8 @@ body * {
   color: var(--text-color);
 }
 #container {
-  height: 712px;
-  width: 580px;
+  width: 100%;
+  max-width: 588px;
   margin: 56px auto 0;
   padding: 0 24px;
 }
